# jd.create.aiword.screen

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.kiro/specs/jd-live-assistant/: design.md  requirements.md  tasks.md
.kiro/specs/login-encryption/: design.md  requirements.md  tasks.md
.kiro/steering/: tauri-vue-development.md
docs/: card.js  服务端加密接口改造说明.md
public/: 商品上传模版（2025最新版） .xlsx  商品模板.xlsx
script/: generate-icons.mjs  generate-template.mjs  test-xlsx.mjs
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  jd.rs  lib.rs  main.rs  screen.rs  utils.rs
src-tauri/src/cookie/: mod.rs  reader.rs
src/config/: app.config.ts  constants.ts
src/core/composables/: useTheme.ts
src/modules/auth/: index.ts
src/modules/auth/stores/: auth.ts
src/modules/live/: index.ts
src/modules/live/api/: jd.ts
src/modules/live/components/: AIScriptPanel.vue  AISettingsModal.vue  AnnouncementBar.vue  BrowserList.vue  CountdownTimer.vue  ExecutionLog.vue  ImageConfig.vue  LiveParams.vue  LiveTitleModal.vue  ProductConfig.vue  SettingsModal.vue
src/modules/live/stores/: live.ts
src/modules/live/types/: index.ts
src/modules/live/views/: LiveAssistant.vue  ScreenContent.vue  ScreenCountdown.vue  ScreenScript.vue
src/router/: index.ts
src/styles/: index.css
