[package]
name = "jd-live-assistant"
version = "0.1.0"
description = "京东直播助手"
authors = ["BluerAngala <new-ai@foxmail.com>"]
edition = "2021"

[lib]
name = "jd_live_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# === 核心依赖（必须保留）===
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# === 认证模块依赖 ===
dirs = "5.0"
hostname = "0.4"

# === Cookie 模块依赖（不需要可注释）===
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# === 投屏模块依赖（不需要可注释）===
urlencoding = "2.1"
